# NextSteps

./: .gitignore  README.md  main.py  nixpacks.toml  pyproject.toml  requirements.txt
agents/: __init__.py  company_research.py  cover_letter.py  cv_parser.py  interviewer.py  jd_scraper.py  resume_tailor.py  skill_matcher.py
api/: __init__.py  main.py
api/routers/: __init__.py  apply.py  interview.py  match.py  parse.py  tutor.py
frontend/: dashboard.html  docs.html  index.html
frontend/css/: components.css  design-system.css  pages.css  sidebar.css
frontend/js/: helpers.js  navigation.js  phase1-parse.js  phase2-match.js  phase3-tailor.js  phase4-interview.js  state.js
models/: __init__.py  schemas.py
prompts/: __init__.py  company_research_prompt.py  cv_parser_prompt.py  jd_scraper_prompt.py  skill_matcher_prompt.py
rag/: __init__.py  cv_loader.py  embedder.py  store.py
utils/: __init__.py  llm.py  pii.py
